runtime/tests/cases/variables/errors/save_shadows_temp.bobbin
temp name = "Alice"
save name = "Bob"
Hello, {name}!
